component/viewer/wicket/ui/src/main/java/org/apache/isis/viewer/wicket/ui/pages/bootstrap-overrides.css
/* ... */
.linksSelectorPanel ul.dropdown-menu li.viewItem {
    min-width: 0;
}

.linksSelectorPanel ul.viewList li.viewItem:first-child span {
    border-radius:4px 0 0 4px;
    -moz-border-radius:4px 0 0 4px;
    -webkit-border-radius:4px 0 0 4px;
}

.linksSelectorPanel ul.viewList li.viewItem:last-child span {
    border-radius:0 4px 4px 0;
    -moz-border-radius:0 4px 4px 0;
    -webkit-border-radius:0 4px 4px 0;
}


.linksSelectorPanel .link-selector-panel-invisible {
    display:none;
}

.linksSelectorPanel .list-inline {
    margin-left: 0;
}

.linksSelectorPanel .list-inline li {
    padding-left: 0;
}


.collectionContentsLinksSelectorPanel select {
    margin-bottom: 1em;
}


/* from CollectionContentsAsSummary */

.collectionContentsAsSummary .propertyNameCell,
.collectionContentsAsSummary .aggregatesCell {
    vertical-align: middle;
}

.collectionContentsAsSummary .aggregateName {
    font-style: normal;
    text-align: left;
    font-weight: bold !important;
    font-size: 0.9em;
    padding-left: 20px;
    padding-right: 10px;
    vertical-align: middle;
}

.collectionContentsAsSummary .numberValue {
    text-align: right;
    width: 80px;
}

.collectionContentsAsSummary .chart {
    margin-left: 30px;
    display: inline-block;
    min-width: 720px;
}

/*
a span.ViewLinkItem.summary {
    background-image:url("./icon_summary_on.png");
    background-position: center center;
    background-repeat:no-repeat;
}

span.ViewLinkItem.summary {
    background-image:url("./icon_summary_off.png");
    background-position: center center;
    background-repeat:no-repeat;
}
*/


/* from EntityHeaderPanel.css */

.entityHeaderPanel {
    clear:both;
    padding-top:10px;
    display:block;
}

div.entityHeaderPanel .iconAndTitle{
    float: left;
    padding:0;
    padding-bottom: 5px;
    width: 100%;
}

div.entityHeaderPanel .iconAndTitleLabel {
    float: left;
}

div.entityHeaderPanel .entityActions .cssMenuPanel .cssMenuItems:first-child {
    float: left;
    margin-top: 3px;
    margin-left: 20px;
}

.entityHeaderPanel .entityImage {
    width: 32px;
    height: 32px;
    vertical-align:text-bottom;
}

.entityHeaderPanel .entityTitle {
    font-size: 1.8em;
    font-weight:normal;
    text-decoration:none;
}


/* from BreadcrumbPanel.css */

.breadcrumbPanel {
    display: inline-block;
    width: 300px;
}


/* from ContainedButtonPanel */

span.containedButtonPanel {
    display: inline;
}

.containedButtonPanel form {
    display: inline;
}


/* from ZeroClipboardPanel */

.zeroClipboardPanel .subscribingLink {
    display: none;
}

.zeroClipboardPanel a:hover {
    text-decoration: none;
}

.copyLink {
    visibility: hidden;
}


/* other */

.mandatory.scalarName:after,
.mandatory.collectionName:after {
    content: "*";
    font-weight:bold;
    color: #c2270d;
}


.navbar .powered-by {
    margin-right: 0px;
}






/* from entityPropertiesPanel */


.entityPropertiesPanel .properties.panel-body {
    padding-bottom: 5px;
}
.entityPropertiesPanel .collection.panel-body {
    padding-bottom: 0px;
}



/* from additionalLinksPanel.css */

span .fa {
    padding-right: 2px;
}

.additionalLinkList {
    float:left;
    margin:0;
    padding:0;
    list-style:none;
}

ul.additionalLinkList,
div.additionalLinkList {
    padding-bottom: 10px;
}

.standaloneCollectionPanel div.additionalLinkList,
.standaloneCollectionPanel ul.additionalLinkList,
.entityCollectionsPanel div.additionalLinkList,
.entityCollectionsPanel ul.additionalLinkList {
    padding-bottom: 0px;
}









.entityPropertiesPanel .additionalLinks,
.entityCollectionsPanel .additionalLinksAndSelectorDropDown {
    margin-top: -4px;
}

.collection.panel-body {
    padding-top: 0px;
}

.collectionPanel .well {
    background-color: transparent;
    margin-bottom: 0px;
}



.nav > li > a {
    padding-left: 10px;
    padding-right: 10px;
}

/* fix for Firefox */
th > a > div > strong {
    float: left;
}

/* Labels on the left/top/none START */

.form-group {
    margin-bottom: 0;
}


div.label-left.form-group {
    width: 100%;
}

div.label-left label.control-label {
    width: 30%;
    float: left;
    padding-top: 2px;
    text-align: start;
}

div.label-top label.control-label {
    padding-left: 10px;
    padding-bottom: 4px;
}

div.label-none label.control-label {
    display: none;
}

div.label-left .scalarValueWrapper {
    width: 70%;
    float: left;
}

div.label-left.actions-right .scalarValueWrapper {
    width: 62%;
}

.actions-right .additionalLinkListDropDown {
    float:right;
    /*width: 3%;*/
}


div.label-top .scalarValueWrapper,
div.label-none .scalarValueWrapper {
    width: 99.5%;
    display: block;
    padding-left: 8px;
    padding-right: 20px;
}

.modal-body div.label-top .scalarValueWrapper,
.modal-body div.label-none .scalarValueWrapper {
    padding-right: 14px;
}

div.label-left .scalarValueWrapper .form-control {
    width: 100%;
}

.file-preview-thumbnails {
    overflow: auto;
}

div.label-left .scalarValueWrapper .input-group {
    width: 100%;
}

div.label-left .scalarValueWrapper .input-group .input-group-addon {
    width: 1%;
}

div.label-left .choicesPlaceholder {
    display: inline-block;
    width: 100%;
    vertical-align: -webkit-baseline-middle;
    vertical-align: middle;
}
/* Labels on the left/top/none END */


.form-horizontal.actionParametersForm .form-group {
    margin-left: -5px;
}

.form-horizontal.inputForm .form-group {
    margin-left: 0px;
    margin-right: -25px;
}

.form-horizontal.inputForm .form-group.label-none,
.form-horizontal.inputForm .form-group.label-top {
    margin-left: -10px;
}


.scalarValueWrapper textarea {
    resize: vertical;
}


.standaloneCollectionPanel .additionalLinkList {
    margin-left: 50px;
    margin-bottom: 0px;
    margin-top: -4px;
}
.standaloneCollectionPanel .selectorDropdown {
    margin-top: -4px;
}
.standaloneCollectionPanel div.iconAndTitle {
    min-height: 45px;
}
/* ... */

